toy-c-compiler-master/src/test/resources/errors/int_return_missing_value.tc
int f() {
    return;
}

int main() {
    return f();
}
